parser.output
Grammar

    0 $accept: Start $end

    1 Start: Classes

    2 Classes: Class Classes
    3        | Class

    4 Class: T_ID T_EXTENDS T_ID T_OPENCURLY Members Methods T_CLOSECURLY
    5      | T_ID T_OPENCURLY Members Methods T_CLOSECURLY

    6 Members: Members Member
    7        | /* empty */

    8 Member: Type T_ID

    9 Type: T_INT
   10     | T_BOOL
   11     | T_ID

   12 Methods: Method Methods
   13        | /* empty */

   14 Method: T_ID T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW ReturnType T_OPENCURLY Body T_CLOSECURLY

   15 Body: Declarations Statements Return

   16 Parameters: Parameter Parameters
   17           | /* empty */

   18 Parameter: T_ID T_COLON Type
   19          | Parameter T_COMMA

   20 Declarations: Declarations Type Declaration
   21             | /* empty */

   22 Declaration: Declaration T_COMMA T_ID
   23            | T_ID

   24 Statements: Statement Statements
   25           | /* empty */

   26 Statement: Assignment
   27          | Method_Call
   28          | ifelse
   29          | While
   30          | print

   31 Return: T_RETURN Expressions
   32       | /* empty */

   33 Assignment: T_ID T_DOT T_ID T_E Expressions
   34           | T_ID T_E Expressions

   35 Method_Call: T_ID T_DOT T_ID T_OPENPAREN Arguments T_CLOSEPAREN
   36            | T_ID T_OPENPAREN Arguments T_CLOSEPAREN

   37 ifelse: T_IF Expressions T_OPENCURLY Block T_CLOSECURLY
   38       | T_IF Expressions T_OPENCURLY Block T_CLOSECURLY T_ELSE T_OPENCURLY Block T_CLOSECURLY

   39 While: T_WHILE Expressions T_OPENCURLY Block T_CLOSECURLY

   40 print: T_PRINT Expressions

   41 Block: Statement Block
   42      | Statement

   43 Expressions: Expressions T_PLUS Expressions
   44            | Expressions T_MINUS Expressions
   45            | Expressions T_TIMES Expressions
   46            | Expressions T_DIV Expressions
   47            | Expressions T_LESS Expressions
   48            | Expressions T_LESSEQUAL Expressions
   49            | Expressions T_EQUAL Expressions
   50            | Expressions T_AND Expressions
   51            | Expressions T_OR Expressions
   52            | T_NOT Expressions
   53            | T_MINUS Expressions
   54            | T_ID
   55            | T_ID T_DOT T_ID
   56            | MethodCall
   57            | T_OPENPAREN Expressions T_CLOSEPAREN
   58            | T_NUM
   59            | T_TRUE
   60            | T_FALSE
   61            | T_NEW T_ID
   62            | T_NEW T_ID T_OPENPAREN Arguments T_CLOSEPAREN

   63 ReturnType: T_NONE
   64           | Type

   65 MethodCall: T_ID T_OPENPAREN Arguments T_CLOSEPAREN
   66           | T_ID T_DOT T_ID T_OPENPAREN Arguments T_CLOSEPAREN

   67 Arguments: Arguments_p
   68          | /* empty */

   69 Arguments_p: Arguments_p T_COMMA Expressions
   70            | Expressions


Terminals, with rules where they appear

$end (0) 0
error (256)
T_NUM (258) 58
T_INT (259) 9
T_EXTENDS (260) 4
T_OPENCURLY (261) 4 5 14 37 38 39
T_CLOSECURLY (262) 4 5 14 37 38 39
T_OPENPAREN (263) 14 35 36 57 62 65 66
T_CLOSEPAREN (264) 14 35 36 57 62 65 66
T_RETURN (265) 31
T_ID (266) 4 5 8 11 14 18 22 23 33 34 35 36 54 55 61 62 65 66
T_BOOL (267) 10
T_IF (268) 37 38
T_ELSE (269) 38
T_WHILE (270) 39
T_PRINT (271) 40
T_DOT (272) 33 35 55 66
T_OR (273) 51
T_AND (274) 50
T_LESSEQUAL (275) 48
T_LESS (276) 47
T_PLUS (277) 43
T_MINUS (278) 44 53
T_TIMES (279) 45
T_DIV (280) 46
T_NOT (281) 52
T_ARROW (282) 14
T_EQUAL (283) 49
T_NONE (284) 63
T_NEW (285) 61 62
T_COMMA (286) 19 22 69
T_TRUE (287) 59
T_FALSE (288) 60
T_COLON (289) 18
T_E (290) 33 34


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
Start (37)
    on left: 1, on right: 0
Classes (38)
    on left: 2 3, on right: 1 2
Class (39)
    on left: 4 5, on right: 2 3
Members (40)
    on left: 6 7, on right: 4 5 6
Member (41)
    on left: 8, on right: 6
Type (42)
    on left: 9 10 11, on right: 8 18 20 64
Methods (43)
    on left: 12 13, on right: 4 5 12
Method (44)
    on left: 14, on right: 12
Body (45)
    on left: 15, on right: 14
Parameters (46)
    on left: 16 17, on right: 14 16
Parameter (47)
    on left: 18 19, on right: 16 19
Declarations (48)
    on left: 20 21, on right: 15 20
Declaration (49)
    on left: 22 23, on right: 20 22
Statements (50)
    on left: 24 25, on right: 15 24
Statement (51)
    on left: 26 27 28 29 30, on right: 24 41 42
Return (52)
    on left: 31 32, on right: 15
Assignment (53)
    on left: 33 34, on right: 26
Method_Call (54)
    on left: 35 36, on right: 27
ifelse (55)
    on left: 37 38, on right: 28
While (56)
    on left: 39, on right: 29
print (57)
    on left: 40, on right: 30
Block (58)
    on left: 41 42, on right: 37 38 39 41
Expressions (59)
    on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
    61 62, on right: 31 33 34 37 38 39 40 43 44 45 46 47 48 49 50 51
    52 53 57 69 70
ReturnType (60)
    on left: 63 64, on right: 14
MethodCall (61)
    on left: 65 66, on right: 56
Arguments (62)
    on left: 67 68, on right: 35 36 62 65 66
Arguments_p (63)
    on left: 69 70, on right: 67 69


state 0

    0 $accept: . Start $end

    T_ID  shift, and go to state 1

    Start    go to state 2
    Classes  go to state 3
    Class    go to state 4


state 1

    4 Class: T_ID . T_EXTENDS T_ID T_OPENCURLY Members Methods T_CLOSECURLY
    5      | T_ID . T_OPENCURLY Members Methods T_CLOSECURLY

    T_EXTENDS    shift, and go to state 5
    T_OPENCURLY  shift, and go to state 6


state 2

    0 $accept: Start . $end

    $end  shift, and go to state 7


state 3

    1 Start: Classes .

    $default  reduce using rule 1 (Start)


state 4

    2 Classes: Class . Classes
    3        | Class .

    T_ID  shift, and go to state 1

    $default  reduce using rule 3 (Classes)

    Classes  go to state 8
    Class    go to state 4


state 5

    4 Class: T_ID T_EXTENDS . T_ID T_OPENCURLY Members Methods T_CLOSECURLY

    T_ID  shift, and go to state 9


state 6

    5 Class: T_ID T_OPENCURLY . Members Methods T_CLOSECURLY

    $default  reduce using rule 7 (Members)

    Members  go to state 10


state 7

    0 $accept: Start $end .

    $default  accept


state 8

    2 Classes: Class Classes .

    $default  reduce using rule 2 (Classes)


state 9

    4 Class: T_ID T_EXTENDS T_ID . T_OPENCURLY Members Methods T_CLOSECURLY

    T_OPENCURLY  shift, and go to state 11


state 10

    5 Class: T_ID T_OPENCURLY Members . Methods T_CLOSECURLY
    6 Members: Members . Member

    T_INT   shift, and go to state 12
    T_ID    shift, and go to state 13
    T_BOOL  shift, and go to state 14

    $default  reduce using rule 13 (Methods)

    Member   go to state 15
    Type     go to state 16
    Methods  go to state 17
    Method   go to state 18


state 11

    4 Class: T_ID T_EXTENDS T_ID T_OPENCURLY . Members Methods T_CLOSECURLY

    $default  reduce using rule 7 (Members)

    Members  go to state 19


state 12

    9 Type: T_INT .

    $default  reduce using rule 9 (Type)


state 13

   11 Type: T_ID .
   14 Method: T_ID . T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW ReturnType T_OPENCURLY Body T_CLOSECURLY

    T_OPENPAREN  shift, and go to state 20

    $default  reduce using rule 11 (Type)


state 14

   10 Type: T_BOOL .

    $default  reduce using rule 10 (Type)


state 15

    6 Members: Members Member .

    $default  reduce using rule 6 (Members)


state 16

    8 Member: Type . T_ID

    T_ID  shift, and go to state 21


state 17

    5 Class: T_ID T_OPENCURLY Members Methods . T_CLOSECURLY

    T_CLOSECURLY  shift, and go to state 22


state 18

   12 Methods: Method . Methods

    T_ID  shift, and go to state 23

    $default  reduce using rule 13 (Methods)

    Methods  go to state 24
    Method   go to state 18


state 19

    4 Class: T_ID T_EXTENDS T_ID T_OPENCURLY Members . Methods T_CLOSECURLY
    6 Members: Members . Member

    T_INT   shift, and go to state 12
    T_ID    shift, and go to state 13
    T_BOOL  shift, and go to state 14

    $default  reduce using rule 13 (Methods)

    Member   go to state 15
    Type     go to state 16
    Methods  go to state 25
    Method   go to state 18


state 20

   14 Method: T_ID T_OPENPAREN . Parameters T_CLOSEPAREN T_ARROW ReturnType T_OPENCURLY Body T_CLOSECURLY

    T_ID  shift, and go to state 26

    $default  reduce using rule 17 (Parameters)

    Parameters  go to state 27
    Parameter   go to state 28


state 21

    8 Member: Type T_ID .

    $default  reduce using rule 8 (Member)


state 22

    5 Class: T_ID T_OPENCURLY Members Methods T_CLOSECURLY .

    $default  reduce using rule 5 (Class)


state 23

   14 Method: T_ID . T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW ReturnType T_OPENCURLY Body T_CLOSECURLY

    T_OPENPAREN  shift, and go to state 20


state 24

   12 Methods: Method Methods .

    $default  reduce using rule 12 (Methods)


state 25

    4 Class: T_ID T_EXTENDS T_ID T_OPENCURLY Members Methods . T_CLOSECURLY

    T_CLOSECURLY  shift, and go to state 29


state 26

   18 Parameter: T_ID . T_COLON Type

    T_COLON  shift, and go to state 30


state 27

   14 Method: T_ID T_OPENPAREN Parameters . T_CLOSEPAREN T_ARROW ReturnType T_OPENCURLY Body T_CLOSECURLY

    T_CLOSEPAREN  shift, and go to state 31


state 28

   16 Parameters: Parameter . Parameters
   19 Parameter: Parameter . T_COMMA

    T_ID     shift, and go to state 26
    T_COMMA  shift, and go to state 32

    $default  reduce using rule 17 (Parameters)

    Parameters  go to state 33
    Parameter   go to state 28


state 29

    4 Class: T_ID T_EXTENDS T_ID T_OPENCURLY Members Methods T_CLOSECURLY .

    $default  reduce using rule 4 (Class)


state 30

   18 Parameter: T_ID T_COLON . Type

    T_INT   shift, and go to state 12
    T_ID    shift, and go to state 34
    T_BOOL  shift, and go to state 14

    Type  go to state 35


state 31

   14 Method: T_ID T_OPENPAREN Parameters T_CLOSEPAREN . T_ARROW ReturnType T_OPENCURLY Body T_CLOSECURLY

    T_ARROW  shift, and go to state 36


state 32

   19 Parameter: Parameter T_COMMA .

    $default  reduce using rule 19 (Parameter)


state 33

   16 Parameters: Parameter Parameters .

    $default  reduce using rule 16 (Parameters)


state 34

   11 Type: T_ID .

    $default  reduce using rule 11 (Type)


state 35

   18 Parameter: T_ID T_COLON Type .

    $default  reduce using rule 18 (Parameter)


state 36

   14 Method: T_ID T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW . ReturnType T_OPENCURLY Body T_CLOSECURLY

    T_INT   shift, and go to state 12
    T_ID    shift, and go to state 34
    T_BOOL  shift, and go to state 14
    T_NONE  shift, and go to state 37

    Type        go to state 38
    ReturnType  go to state 39


state 37

   63 ReturnType: T_NONE .

    $default  reduce using rule 63 (ReturnType)


state 38

   64 ReturnType: Type .

    $default  reduce using rule 64 (ReturnType)


state 39

   14 Method: T_ID T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW ReturnType . T_OPENCURLY Body T_CLOSECURLY

    T_OPENCURLY  shift, and go to state 40


state 40

   14 Method: T_ID T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW ReturnType T_OPENCURLY . Body T_CLOSECURLY

    $default  reduce using rule 21 (Declarations)

    Body          go to state 41
    Declarations  go to state 42


state 41

   14 Method: T_ID T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW ReturnType T_OPENCURLY Body . T_CLOSECURLY

    T_CLOSECURLY  shift, and go to state 43


state 42

   15 Body: Declarations . Statements Return
   20 Declarations: Declarations . Type Declaration

    T_INT    shift, and go to state 12
    T_ID     shift, and go to state 44
    T_BOOL   shift, and go to state 14
    T_IF     shift, and go to state 45
    T_WHILE  shift, and go to state 46
    T_PRINT  shift, and go to state 47

    $default  reduce using rule 25 (Statements)

    Type         go to state 48
    Statements   go to state 49
    Statement    go to state 50
    Assignment   go to state 51
    Method_Call  go to state 52
    ifelse       go to state 53
    While        go to state 54
    print        go to state 55


state 43

   14 Method: T_ID T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW ReturnType T_OPENCURLY Body T_CLOSECURLY .

    $default  reduce using rule 14 (Method)


state 44

   11 Type: T_ID .
   33 Assignment: T_ID . T_DOT T_ID T_E Expressions
   34           | T_ID . T_E Expressions
   35 Method_Call: T_ID . T_DOT T_ID T_OPENPAREN Arguments T_CLOSEPAREN
   36            | T_ID . T_OPENPAREN Arguments T_CLOSEPAREN

    T_OPENPAREN  shift, and go to state 56
    T_DOT        shift, and go to state 57
    T_E          shift, and go to state 58

    $default  reduce using rule 11 (Type)


state 45

   37 ifelse: T_IF . Expressions T_OPENCURLY Block T_CLOSECURLY
   38       | T_IF . Expressions T_OPENCURLY Block T_CLOSECURLY T_ELSE T_OPENCURLY Block T_CLOSECURLY

    T_NUM        shift, and go to state 59
    T_OPENPAREN  shift, and go to state 60
    T_ID         shift, and go to state 61
    T_MINUS      shift, and go to state 62
    T_NOT        shift, and go to state 63
    T_NEW        shift, and go to state 64
    T_TRUE       shift, and go to state 65
    T_FALSE      shift, and go to state 66

    Expressions  go to state 67
    MethodCall   go to state 68


state 46

   39 While: T_WHILE . Expressions T_OPENCURLY Block T_CLOSECURLY

    T_NUM        shift, and go to state 59
    T_OPENPAREN  shift, and go to state 60
    T_ID         shift, and go to state 61
    T_MINUS      shift, and go to state 62
    T_NOT        shift, and go to state 63
    T_NEW        shift, and go to state 64
    T_TRUE       shift, and go to state 65
    T_FALSE      shift, and go to state 66

    Expressions  go to state 69
    MethodCall   go to state 68


state 47

   40 print: T_PRINT . Expressions

    T_NUM        shift, and go to state 59
    T_OPENPAREN  shift, and go to state 60
    T_ID         shift, and go to state 61
    T_MINUS      shift, and go to state 62
    T_NOT        shift, and go to state 63
    T_NEW        shift, and go to state 64
    T_TRUE       shift, and go to state 65
    T_FALSE      shift, and go to state 66

    Expressions  go to state 70
    MethodCall   go to state 68


state 48

   20 Declarations: Declarations Type . Declaration

    T_ID  shift, and go to state 71

    Declaration  go to state 72


state 49

   15 Body: Declarations Statements . Return

    T_RETURN  shift, and go to state 73

    $default  reduce using rule 32 (Return)

    Return  go to state 74


state 50

   24 Statements: Statement . Statements

    T_ID     shift, and go to state 75
    T_IF     shift, and go to state 45
    T_WHILE  shift, and go to state 46
    T_PRINT  shift, and go to state 47

    $default  reduce using rule 25 (Statements)

    Statements   go to state 76
    Statement    go to state 50
    Assignment   go to state 51
    Method_Call  go to state 52
    ifelse       go to state 53
    While        go to state 54
    print        go to state 55


state 51

   26 Statement: Assignment .

    $default  reduce using rule 26 (Statement)


state 52

   27 Statement: Method_Call .

    $default  reduce using rule 27 (Statement)


state 53

   28 Statement: ifelse .

    $default  reduce using rule 28 (Statement)


state 54

   29 Statement: While .

    $default  reduce using rule 29 (Statement)


state 55

   30 Statement: print .

    $default  reduce using rule 30 (Statement)


state 56

   36 Method_Call: T_ID T_OPENPAREN . Arguments T_CLOSEPAREN

    T_NUM        shift, and go to state 59
    T_OPENPAREN  shift, and go to state 60
    T_ID         shift, and go to state 61
    T_MINUS      shift, and go to state 62
    T_NOT        shift, and go to state 63
    T_NEW        shift, and go to state 64
    T_TRUE       shift, and go to state 65
    T_FALSE      shift, and go to state 66

    $default  reduce using rule 68 (Arguments)

    Expressions  go to state 77
    MethodCall   go to state 68
    Arguments    go to state 78
    Arguments_p  go to state 79


state 57

   33 Assignment: T_ID T_DOT . T_ID T_E Expressions
   35 Method_Call: T_ID T_DOT . T_ID T_OPENPAREN Arguments T_CLOSEPAREN

    T_ID  shift, and go to state 80


state 58

   34 Assignment: T_ID T_E . Expressions

    T_NUM        shift, and go to state 59
    T_OPENPAREN  shift, and go to state 60
    T_ID         shift, and go to state 61
    T_MINUS      shift, and go to state 62
    T_NOT        shift, and go to state 63
    T_NEW        shift, and go to state 64
    T_TRUE       shift, and go to state 65
    T_FALSE      shift, and go to state 66

    Expressions  go to state 81
    MethodCall   go to state 68


state 59

   58 Expressions: T_NUM .

    $default  reduce using rule 58 (Expressions)


state 60

   57 Expressions: T_OPENPAREN . Expressions T_CLOSEPAREN

    T_NUM        shift, and go to state 59
    T_OPENPAREN  shift, and go to state 60
    T_ID         shift, and go to state 61
    T_MINUS      shift, and go to state 62
    T_NOT        shift, and go to state 63
    T_NEW        shift, and go to state 64
    T_TRUE       shift, and go to state 65
    T_FALSE      shift, and go to state 66

    Expressions  go to state 82
    MethodCall   go to state 68


state 61

   54 Expressions: T_ID .
   55            | T_ID . T_DOT T_ID
   65 MethodCall: T_ID . T_OPENPAREN Arguments T_CLOSEPAREN
   66           | T_ID . T_DOT T_ID T_OPENPAREN Arguments T_CLOSEPAREN

    T_OPENPAREN  shift, and go to state 83
    T_DOT        shift, and go to state 84

    $default  reduce using rule 54 (Expressions)


state 62

   53 Expressions: T_MINUS . Expressions

    T_NUM        shift, and go to state 59
    T_OPENPAREN  shift, and go to state 60
    T_ID         shift, and go to state 61
    T_MINUS      shift, and go to state 62
    T_NOT        shift, and go to state 63
    T_NEW        shift, and go to state 64
    T_TRUE       shift, and go to state 65
    T_FALSE      shift, and go to state 66

    Expressions  go to state 85
    MethodCall   go to state 68


state 63

   52 Expressions: T_NOT . Expressions

    T_NUM        shift, and go to state 59
    T_OPENPAREN  shift, and go to state 60
    T_ID         shift, and go to state 61
    T_MINUS      shift, and go to state 62
    T_NOT        shift, and go to state 63
    T_NEW        shift, and go to state 64
    T_TRUE       shift, and go to state 65
    T_FALSE      shift, and go to state 66

    Expressions  go to state 86
    MethodCall   go to state 68


state 64

   61 Expressions: T_NEW . T_ID
   62            | T_NEW . T_ID T_OPENPAREN Arguments T_CLOSEPAREN

    T_ID  shift, and go to state 87


state 65

   59 Expressions: T_TRUE .

    $default  reduce using rule 59 (Expressions)


state 66

   60 Expressions: T_FALSE .

    $default  reduce using rule 60 (Expressions)


state 67

   37 ifelse: T_IF Expressions . T_OPENCURLY Block T_CLOSECURLY
   38       | T_IF Expressions . T_OPENCURLY Block T_CLOSECURLY T_ELSE T_OPENCURLY Block T_CLOSECURLY
   43 Expressions: Expressions . T_PLUS Expressions
   44            | Expressions . T_MINUS Expressions
   45            | Expressions . T_TIMES Expressions
   46            | Expressions . T_DIV Expressions
   47            | Expressions . T_LESS Expressions
   48            | Expressions . T_LESSEQUAL Expressions
   49            | Expressions . T_EQUAL Expressions
   50            | Expressions . T_AND Expressions
   51            | Expressions . T_OR Expressions

    T_OPENCURLY  shift, and go to state 88
    T_OR         shift, and go to state 89
    T_AND        shift, and go to state 90
    T_LESSEQUAL  shift, and go to state 91
    T_LESS       shift, and go to state 92
    T_PLUS       shift, and go to state 93
    T_MINUS      shift, and go to state 94
    T_TIMES      shift, and go to state 95
    T_DIV        shift, and go to state 96
    T_EQUAL      shift, and go to state 97


state 68

   56 Expressions: MethodCall .

    $default  reduce using rule 56 (Expressions)


state 69

   39 While: T_WHILE Expressions . T_OPENCURLY Block T_CLOSECURLY
   43 Expressions: Expressions . T_PLUS Expressions
   44            | Expressions . T_MINUS Expressions
   45            | Expressions . T_TIMES Expressions
   46            | Expressions . T_DIV Expressions
   47            | Expressions . T_LESS Expressions
   48            | Expressions . T_LESSEQUAL Expressions
   49            | Expressions . T_EQUAL Expressions
   50            | Expressions . T_AND Expressions
   51            | Expressions . T_OR Expressions

    T_OPENCURLY  shift, and go to state 98
    T_OR         shift, and go to state 89
    T_AND        shift, and go to state 90
    T_LESSEQUAL  shift, and go to state 91
    T_LESS       shift, and go to state 92
    T_PLUS       shift, and go to state 93
    T_MINUS      shift, and go to state 94
    T_TIMES      shift, and go to state 95
    T_DIV        shift, and go to state 96
    T_EQUAL      shift, and go to state 97


state 70

   40 print: T_PRINT Expressions .
   43 Expressions: Expressions . T_PLUS Expressions
   44            | Expressions . T_MINUS Expressions
   45            | Expressions . T_TIMES Expressions
   46            | Expressions . T_DIV Expressions
   47            | Expressions . T_LESS Expressions
   48            | Expressions . T_LESSEQUAL Expressions
   49            | Expressions . T_EQUAL Expressions
   50            | Expressions . T_AND Expressions
   51            | Expressions . T_OR Expressions

    T_OR         shift, and go to state 89
    T_AND        shift, and go to state 90
    T_LESSEQUAL  shift, and go to state 91
    T_LESS       shift, and go to state 92
    T_PLUS       shift, and go to state 93
    T_MINUS      shift, and go to state 94
    T_TIMES      shift, and go to state 95
    T_DIV        shift, and go to state 96
    T_EQUAL      shift, and go to state 97

    $default  reduce using rule 40 (print)


state 71

   23 Declaration: T_ID .

    $default  reduce using rule 23 (Declaration)


state 72

   20 Declarations: Declarations Type Declaration .
   22 Declaration: Declaration . T_COMMA T_ID

    T_COMMA  shift, and go to state 99

    $default  reduce using rule 20 (Declarations)


state 73

   31 Return: T_RETURN . Expressions

    T_NUM        shift, and go to state 59
    T_OPENPAREN  shift, and go to state 60
    T_ID         shift, and go to state 61
    T_MINUS      shift, and go to state 62
    T_NOT        shift, and go to state 63
    T_NEW        shift, and go to state 64
    T_TRUE       shift, and go to state 65
    T_FALSE      shift, and go to state 66

    Expressions  go to state 100
    MethodCall   go to state 68


state 74

   15 Body: Declarations Statements Return .

    $default  reduce using rule 15 (Body)


state 75

   33 Assignment: T_ID . T_DOT T_ID T_E Expressions
   34           | T_ID . T_E Expressions
   35 Method_Call: T_ID . T_DOT T_ID T_OPENPAREN Arguments T_CLOSEPAREN
   36            | T_ID . T_OPENPAREN Arguments T_CLOSEPAREN

    T_OPENPAREN  shift, and go to state 56
    T_DOT        shift, and go to state 57
    T_E          shift, and go to state 58


state 76

   24 Statements: Statement Statements .

    $default  reduce using rule 24 (Statements)


state 77
